@@ -1,3 +1,9 @@
+2000-02-02  Mike Thomas  <wart@scriptics.com>
+
+	* configure.in:
+	* Makefile.in: Applied patch from Andreas Kupries to fix install
+	problems when building static libraries.
+
 2000-01-24  Mike Thomas  <wart@scriptics.com>
 
 	* tcl.m4: Look for CYGWIN_98 and CYGWIN_95 environments, not just
